<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.ioreef.aqctelco.MainActivity">

    <com.ioreef.aqctelco.slidingtab.SlidingTabLayout
        android:id="@+id/main_sliding_tabs"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimary"/>

    <android.support.v4.view.ViewPager
        android:id="@+id/main_sliding_pager"
        android:layout_height="0dp"
        android:layout_width="match_parent"
        android:layout_weight="1" />

</LinearLayout>
