...
        Timothé BATTEUR &amp; Arnaud BUCHS &amp; Guillaume MARTIN (AqC Supervision)
        \n\nLogiciel sous Licence BSD 3-Clause\nhttps://opensource.org/licenses/BSD-3-Clause\n\nVersion 1.0.1181 - Mai 2016
    </string>
    <string name="btnMainCredits">Crédits</string>

    <!-- Relais -->
    <string name="editNameTitle">Modifier le nom du relai « %1$s »</string>
    <string name="editNameInputEmpty">Entrer un nom pour le relais %1$s</string>
    <string name="btnRelayNameOK">Valider</string>
    <string name="btnRelayNameCancel">Annuler</string>

    <!-- Light -->
    <string name="lightActivityTitle">Modifier l\'éclairage</string>
...
